--- a/sourse/index.html
+++ b/sourse/index.html
@@ -66,42 +66,47 @@
         </div>
       </section>
 
-    <!-- How it work -->
+      <!-- How it work -->
       <section class="in-use">
-        <h2>Как это работает</h2>
-        <ul>
-          <li class="in-use__item"><p>Функциональное питание содержит только полезные питательные вещества.</p></li>
-          <li class="in-use__item"><p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p></li>
-          <li class="in-use__item"><p>Замените один-два приема обычной еды на наше функциональное питание.</p></li>
-          <li class="in-use__item"><p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p></li>
+        <h2 class="in-use__title">Как это работает</h2>
+        <ul class="in-use__list">
+          <li class="in-use__item  in-use__item--consist"><p>Функциональное питание содержит только полезные питательные вещества.</p></li>
+          <li class="in-use__item  in-use__item--form"><p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p></li>
+          <li class="in-use__item  in-use__item--use"><p>Замените один-два приема обычной еды на наше функциональное питание.</p></li>
+          <li class="in-use__item  in-use__item--deadlines"><p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p></li>
         </ul>
       </section>
+    </div>
 
-      <!-- Live example -->
-      <section class="example">
-        <h2>Живой пример</h2>
-        <p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-        <ul>
-          <li>
-            <p>5 кг</p>
-            <p>снижение веса</p>
+    <!-- Live example -->
+    <section class="example">
+      <div class="container-row">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+        <ul class="example__list">
+          <li class="example__item">
+            <p class="example__item--value">5 кг</p>
+            <p class="example__item--param">снижение веса</p>
           </li>
-          <li>
-            <p>60 дней</p>
-            <p>затрачено времени</p>
+          <li class="example__item">
+            <p class="example__item--value">60 дней</p>
+            <p class="example__item--param">затрачено времени</p>
           </li>
         </ul>
-        <div>
+        <div  class="example__spend">
           <p>Затраты на питание: 15 000 руб.</p>
         </div>
         <div class="example-slider">
-          <img src="http://placehold.it/311x232" alt="before">
-          <img src="http://placehold.it/251x240" alt="after">
+          <img class="example-slider__img" src="img/before-mobile@1x.png" alt="before">
         </div>
-        <p>Было</p>
-        <p>Стало</p>
-      </section>
-    </div>
+        <div class="example__range">
+          <p>Было</p>
+          <p>Стало</p>
+        </div>
+      </div>
+    </section>
+
+  <div class="container-row">
     <!-- Contacts -->
     <section class="contacts">
       <h2 class="visually-hidden">Наши контакты</h2>
@@ -111,6 +116,7 @@
       </div>
       <div class="contacts__map"></div>
     </section>
+  </div>
   </main>
   <footer>
     <div class="container-row">
