--- a/sourse/index.html
+++ b/sourse/index.html
@@ -14,7 +14,11 @@
     <div class="container-row">
       <div class="page-header__row">
         <a class="page-header__logo">
-          <img class="page-header__logo-img" src="img/logo-mobile.svg" alt="Кэт энерджи" width="191" height="38">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__logo-img" src="img/logo-mobile.svg" alt="Кэт энерджи" width="191" height="38">
+          </picture>
         </a>
         <button class="page-toggle  page-toggle--none">
           <span class="visually-hidden">Меню</span>
@@ -23,7 +27,7 @@
       <nav class="main-nav  main-nav--show">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link">Главная</a>
+            <a class="main-nav__link  main-nav__link--active">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
@@ -41,14 +45,17 @@
 
     <!-- Intro -->
     <section class="nutrition">
-      <div class="container-row">
+      <div class="container-row  nutrition__row">
         <h2 class="nutrition__title">Функциональное питание для котов</h2>
         <b class="nutrition__promo">Занялся собой? Займись котом!</b>
-        <img class="nutrition__img" src="img/index-can-mobile@1x.png" alt="Кат энерджи - курица" width="280" height="270">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
+          <img class="nutrition__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Кэт энерджи - курица">
+        </picture>
         <a class="nutrition__link  btn" href="form.html">Подобрать программу</a>
       </div>
     </section>
-
 
     <div class="container-row">
       <!-- Programs -->
@@ -82,26 +89,39 @@
     <section class="example">
       <div class="container-row">
         <h2 class="example__title">Живой пример</h2>
-        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-        <ul class="example__list">
-          <li class="example__item">
-            <p class="example__item--value">5 кг</p>
-            <p class="example__item--param">снижение веса</p>
-          </li>
-          <li class="example__item">
-            <p class="example__item--value">60 дней</p>
-            <p class="example__item--param">затрачено времени</p>
-          </li>
-        </ul>
-        <div  class="example__spend">
-          <p>Затраты на питание: 15 000 руб.</p>
+        <div class="example-info">
+          <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+          <ul class="example__list">
+            <li class="example__item">
+              <p class="example__item--value">5 кг</p>
+              <p class="example__item--param">снижение веса</p>
+            </li>
+            <li class="example__item">
+              <p class="example__item--value">60 дней</p>
+              <p class="example__item--param">затрачено времени</p>
+            </li>
+          </ul>
+          <div  class="example__spend">
+            <p>Затраты на питание: 15 000 руб.</p>
+          </div>
         </div>
-        <div class="example-slider">
-          <img class="example-slider__img" src="img/before-mobile@1x.png" alt="before">
-        </div>
-        <div class="example__range">
-          <p>Было</p>
-          <p>Стало</p>
+      </div>
+      <div class="example__slider">
+        <div class="container-row">
+          <figure class="cd-image-container">
+            <img src="img/after-tablet2x.png" alt="Original Image">
+            <span class="cd-image-label" data-type="original"></span>
+            <div class="cd-resize-img">
+              <img src="img/before-tablet2x.png" alt="Modified Image">
+              <span class="cd-image-label" data-type="modified"></span>
+            </div>
+            <span class="cd-handle"></span>
+          </figure>
+          <div class="example__slider-range">
+            <p class="range-text  range-text--before">Было</p>
+            <p class="range"></p>
+            <p class="range-text  range-text--after">Стало</p>
+          </div>
         </div>
       </div>
     </section>
@@ -111,7 +131,7 @@
       <h2 class="visually-hidden">Наши контакты</h2>
       <div class="container-row  contacts-row">
         <p class="contacts__promo"><b>Приглашаем к сотрудничеству дилеров!</b></p>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span class="contacts__address--city">Санкт-Петербург</span></p>
       </div>
       <div class="contacts__map" id="map"></div>
     </section>
@@ -136,6 +156,10 @@
   </footer>
   <script src="http://api-maps.yandex.ru/2.1.68/?lang=ru_RU" type="text/javascript"></script>
   <script src="js/yandex-map.js"></script>
+  <script src="js/libs/jquery-3.3.1.min.js"></script>
+  <script src="js/libs/modernizr.js"></script>
+  <script src="js/libs/jquery.mobile.custom.min.js"></script>
+  <script src="js/libs/main.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
