--- a/sourse/index.html
+++ b/sourse/index.html
@@ -44,17 +44,24 @@
 
     <!-- Intro -->
     <section class="nutrition">
-      <div class="container-row  nutrition__row">
-        <h2 class="nutrition__title">Функциональное питание для котов</h2>
-        <b class="nutrition__promo">Занялся собой? Займись котом!</b>
-        <picture>
-          <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
-          <img class="nutrition__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Кэт энерджи - курица">
-        </picture>
-        <a class="nutrition__link  btn" href="form.html">Подобрать программу</a>
+      <div class="nutrition__promo-wrapper">
+        <div class="container-row  nutrition__row">
+          <h2 class="nutrition__title">Функциональное питание для котов</h2>
+          <b class="nutrition__promo">Занялся собой? Займись котом!</b>
+        </div>
+      </div>
+      <div class="nutrition__picture-wrapper">
+        <div class="container-row">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
+            <img class="nutrition__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Кэт энерджи - курица">
+          </picture>
+          <a class="nutrition__link  btn" href="form.html">Подобрать программу</a>
+        </div>
       </div>
     </section>
+    <!-- End -->
 
     <div class="container-row">
       <!-- Programs -->
@@ -71,6 +78,7 @@
           <a class="catalog__link" href="catalog.html">Каталог pro</a>
         </div>
       </section>
+      <!-- End -->
 
       <!-- How it work -->
       <section class="in-use">
@@ -79,9 +87,10 @@
           <li class="in-use__item  in-use__item--consist"><p>Функциональное питание содержит только полезные питательные вещества.</p></li>
           <li class="in-use__item  in-use__item--form"><p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p></li>
           <li class="in-use__item  in-use__item--use"><p>Замените один-два приема обычной еды на наше функциональное питание.</p></li>
-          <li class="in-use__item  in-use__item--deadlines"><p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p></li>
+          <li class="in-use__item  in-use__item--deadlines"><p>Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p></li>
         </ul>
       </section>
+      <!-- End -->
     </div>
 
     <!-- Live example -->
@@ -90,11 +99,11 @@
         <section class="example__info">
           <h2 class="example__title">Живой пример</h2>
           <div class="example-info">
-            <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+            <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
             <ul class="example__list">
               <li class="example__item">
                 <p class="example__item--value">5 кг</p>
-                <p class="example__item--param">снижение веса</p>
+                <p class="example__item--param  weight">снижение веса</p>
               </li>
               <li class="example__item">
                 <p class="example__item--value">60 дней</p>
@@ -106,14 +115,13 @@
             </div>
           </div>
         </section>
-
         <section class="example__slider">
-
           <figure class="cd-image-container">
             <img src="img/after-tablet2x.png" alt="Original Image">
             <span class="cd-image-label" data-type="original"></span>
             <div class="cd-resize-img">
-              <img src="img/before-tablet2x.png" alt="Modified Image">
+              <img class="example__slider--tablet" src="img/example__slider--tablet.png" alt="Modified Image">
+              <img class="example__slider--mobile" src="img/example__slider--mobile.png" alt="Modified Image">
               <span class="cd-image-label" data-type="modified"></span>
             </div>
             <span class="cd-handle"></span>
@@ -126,31 +134,35 @@
         </section>
       </div>
     </div>
+    <!-- End -->
 
     <!-- Contacts -->
     <section class="contacts">
       <h2 class="visually-hidden">Наши контакты</h2>
       <div class="container-row  contacts-row">
         <div class="contacts-wrap">
-          <p class="contacts__promo"><b>Приглашаем к сотрудничеству дилеров!</b></p>
+          <p class="contacts__promo"><b>Приглашаем к&nbsp;сотрудничеству дилеров!</b></p>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span class="contacts__address--city">Санкт-Петербург</span></p>
         </div>
       </div>
       <div class="contacts__map" id="map"></div>
     </section>
+    <!-- End -->
   </main>
   <footer class="page-footer">
     <div class="container-row">
       <div class="footer__logo">
         <img src="img/logo-footer.svg" alt="Кэт энерджи" width="128" height="24">
       </div>
+      <!-- Social -->
       <div class="footer__social  social">
         <ul class="social__list">
           <li class="social__item"><a class="social__link  social__link--vk" href="#"><span class="visually-hidden">Мы Вконтакте</span></a></li>
-          <li class="social__item"><a class="social__link  social__link--inst" href="#"><span class="visually-hidden">Мы в Инстаграме</span></a></li>
+          <li class="social__item  social__item--inst"><a class="social__link  social__link--inst" href="#"><span class="visually-hidden">Мы в Инстаграме</span></a></li>
           <li class="social__item"><a class="social__link  social__link--fb" href="#"><span class="visually-hidden">Мы в Фейсбук</span></a></li>
         </ul>
       </div>
+      <!-- End -->
       <div class="footer__copyright">
         <p class="footer__copyright--title">Html <span>academy</span></p>
         <img src="img/icon-htmlacademy.svg" alt="Кэт энерджи" width="27" height="34">
