--- a/sourse/index.html
+++ b/sourse/index.html
@@ -30,10 +30,10 @@
             <a class="main-nav__link  main-nav__link--active">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-nav__link" href="#">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">Подбор программы</a>
+            <a class="main-nav__link" href="#">Подбор программы</a>
           </li>
         </ul>
       </nav>
